<resources>
    <string name="app_name">EasyEvents</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Main bar action list -->
    <string name="action_detailview">Detail View</string>
    <string name="action_ptview">Transport view</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_us">About Us</string>
    <string name="action_about_us_msg" color="@color/colorGrey">This is our group effort of a DBL COURSE. Rest in peace Johan Cruijff. Rest in peace Raket-IJsjes</string>
    <string name="action_about_us_title">About us</string>
    <string name="action_about_us_like">Like our app!</string>
    <string name="action_about_us_cancel">Cancel</string>

    <string name="error_title">An error has occurred</string>
    <string name="error_positive">Ok</string>






    <string name="title_activity_maps">Map</string>

    <string name="queryHint">City</string>

    <!-- Strings for Detail View -->
    <string name="ratings_1">OVERALL</string>
    <string name="ratings_2">Weather</string>
    <string name="ratings_3">Foursquare</string>
    <string name="btn_tickets">Get Tickets</string>
    <string name="btn_transport">Show me route</string>
    <string name="event_details">Event Details</string>
    <string name="event_information_stock">No information found, sorry.</string>

    <!-- Strings for Transport View -->
    <string name="PT">Public\nTransport</string>
    <string name="car">Personal\nTransport</string>

    <!-- Strings for Settings_View -->
    <string name="settings_title">Settings</string>
    <string name="settings_time1">Time period</string>
    <string name="settings_time2">This will limit the Events shown.</string>

    <string name="settings_range1">Range</string>
    <string name="settings_range2">This changes the search radius.</string>

    <string name="settings_route1">Route Planner</string>
    <string name="settings_route2">Here you can set the default departure location to be used.</string>
    <string name="settings_route5">NOTE: Ticking the box will override your depature location with your current location.</string>
    <string name="settings_route3">E.g. your home address</string>
    <string name="settings_route4">Use GPS location</string>
    <string name="save_text">Save Address</string>

    <!-- Activity Strings -->
    <string name="title_activity_settings_">Settings_Activity</string>
    <string name="title_activity_googledirections_">Google Directions</string>
    <string name="title_activity_detail_view_">DetailView_Activity</string>

</resources>
