<?xml version="1.0" encoding="utf-8"?>
<!-- How to use this layout for the back-end:
        The only things of interest for the back-end developers are the 'settings' themselves,
        in this comment the id's of these views are listed for quick reference. Line numbers are
        included but they might be incorrect, due to future updates.

        Time Period:
            ID:     @+id/spinner_time
            LINE:   149
            TYPE:   Spinner
            REFERENCE: http://developer.android.com/guide/topics/ui/controls/spinner.html

        Search Range:
            ID:     @+id/spinner_range
            LINE:   206
            TYPE:   Spinner
            REFERENCE: http://developer.android.com/guide/topics/ui/controls/spinner.html

        Home Address:
            ID:     @+id/editText_Home
            LINE:   272
            TYPE:   EditText, inputType="textPostalAddress"
            REFERENCE: http://developer.android.com/reference/android/widget/EditText.html

        Use GPS:
            ID:     @+id/checkBox_GPS
            LINE:   282
            TYPE:   CheckBox
            REFERENCE: http://developer.android.com/reference/android/widget/CheckBox.html
        -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/app_bar_search" android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_padding_TB"
        android:background="@drawable/gradient_grey"/>

    <!-- Settings Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_light"
        android:paddingLeft="@dimen/general_padding_LR"
        android:paddingRight="@dimen/general_padding_LR"
        android:paddingTop="@dimen/general_padding_TB"
        android:paddingBottom="@dimen/general_padding_TB">

        <!-- Artist Title Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.85"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textStyle="bold"
                android:text="Event Name" />

        </LinearLayout>

        <!-- Close Button Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="vertical">

            <!-- verticaal centreren van de button nog doen! -->

            <Button
                android:id="@+id/btn_close_settingsview"
                android:layout_width="@dimen/btn_close_overlay"
                android:layout_height="@dimen/btn_close_overlay"
                android:background="@drawable/btn_closebtn"
                android:layout_gravity="right"
                android:focusable="true"
                android:onClick="btn_close_settings"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_padding_TB"
        android:background="@drawable/gradient_grey"/>

    <!-- Image Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_dark"
        android:paddingLeft="@dimen/general_padding_LR"
        android:paddingRight="@dimen/general_padding_LR"
        android:paddingTop="@dimen/general_padding_TB"
        android:paddingBottom="@dimen/general_padding_TB">

        <!-- Image Column -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="Plaatje artist" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_padding_TB"
        android:background="@drawable/gradient_grey"/>

    <!-- Address/Buttons Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_light"
        android:paddingLeft="@dimen/general_padding_LR"
        android:paddingRight="@dimen/general_padding_LR"
        android:paddingTop="@dimen/general_padding_TB"
        android:paddingBottom="@dimen/general_padding_TB">

        <!-- Address/Buttons Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="Adres shit" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/general_padding_LR"
                android:paddingRight="@dimen/general_padding_LR"
                android:background="@drawable/btn_pill"
                android:id="@+id/btn_tickets"
                android:text="Get Tickets"
                android:layout_gravity="center_vertical" />
            <Button
                style="?attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show me route"
                android:id="@+id/btn_detail_route"
                android:paddingLeft="@dimen/general_padding_LR"
                android:paddingRight="@dimen/general_padding_LR"
                android:background="@drawable/btn_pill"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <!-- Ratings Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratings_1" />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratings_2" />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratings_3" />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_padding_TB"
        android:background="@drawable/gradient_grey"/>

    <!-- Info Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/gradient_dark"
        android:paddingLeft="@dimen/general_padding_LR"
        android:paddingRight="@dimen/general_padding_LR"
        android:paddingTop="@dimen/general_padding_TB"
        android:paddingBottom="@dimen/general_padding_TB">

        <!-- Info Column -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/settings_route1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_route2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_route5" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>